435assignments/a1/ulParser.java
// $ANTLR 3.5.2 ul.g 2021-06-10 14:20:14

    import AST.*;
    import Type.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class ulParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CBRACE", "CBRACKET", "CHARACTERCONSTANT", 
		"COMMA", "COMMENT", "CPARENTHESES", "DOUBLEEQUAL", "ELSE", "EQUAL", "FALSE", 
		"FLOATCONSTANT", "ID", "IF", "INTEGERCONSTANT", "LESSTHAN", "MINUS", "MULTIPLY", 
		"OBRACE", "OBRACKET", "OPARENTHESES", "PLUS", "PRINT", "PRINTLN", "RETURN", 
		"SEMICOLON", "STRINGCONSTANT", "TRUE", "TYPE", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int CBRACE=4;
	public static final int CBRACKET=5;
	public static final int CHARACTERCONSTANT=6;
	public static final int COMMA=7;
	public static final int COMMENT=8;
	public static final int CPARENTHESES=9;
	public static final int DOUBLEEQUAL=10;
	public static final int ELSE=11;
	public static final int EQUAL=12;
	public static final int FALSE=13;
	public static final int FLOATCONSTANT=14;
	public static final int ID=15;
	public static final int IF=16;
	public static final int INTEGERCONSTANT=17;
	public static final int LESSTHAN=18;
	public static final int MINUS=19;
	public static final int MULTIPLY=20;
	public static final int OBRACE=21;
	public static final int OBRACKET=22;
	public static final int OPARENTHESES=23;
	public static final int PLUS=24;
	public static final int PRINT=25;
	public static final int PRINTLN=26;
	public static final int RETURN=27;
	public static final int SEMICOLON=28;
	public static final int STRINGCONSTANT=29;
	public static final int TRUE=30;
	public static final int TYPE=31;
	public static final int WHILE=32;
	public static final int WS=33;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ulParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ulParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return ulParser.tokenNames; }
	@Override public String getGrammarFileName() { return "ul.g"; }


	protected void mismatch (IntStream input, int ttype, BitSet follow)
	        throws RecognitionException
	{
	        throw new MismatchedTokenException(ttype, input);
	}
	public Object recoverFromMismatchedSet (IntStream input,
	                                      RecognitionException e,
	                                      BitSet follow)
	        throws RecognitionException
	{
	        reportError(e);
	        throw e;
	}



	// $ANTLR start "program"
	// ul.g:46:1: program returns [Program p] : (f= function )+ EOF ;
	public final Program program() throws RecognitionException {
		Program p = null;


		Function f =null;


		        p = new Program();

		try {
			// ul.g:51:9: ( (f= function )+ EOF )
			// ul.g:52:9: (f= function )+ EOF
			{
			// ul.g:52:9: (f= function )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==TYPE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// ul.g:52:10: f= function
					{
					pushFollow(FOLLOW_function_in_program116);
					f=function();
					state._fsp--;
					if (state.failed) return p;
					if ( state.backtracking==0 ) {p.add(f);}
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return p;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			match(input,EOF,FOLLOW_EOF_in_program123); if (state.failed) return p;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "program"



	// $ANTLR start "function"
	// ul.g:55:1: function returns [Function f] : fd= functionDecl fb= functionBody ;
	public final Function function() throws RecognitionException {
		Function f = null;


		FunctionDecl fd =null;
		FunctionBody fb =null;

		try {
			// ul.g:56:9: (fd= functionDecl fb= functionBody )
			// ul.g:57:9: fd= functionDecl fb= functionBody
			{
			pushFollow(FOLLOW_functionDecl_in_function150);
			fd=functionDecl();
			state._fsp--;
			if (state.failed) return f;
			pushFollow(FOLLOW_functionBody_in_function156);
			fb=functionBody();
			state._fsp--;
			if (state.failed) return f;
			if ( state.backtracking==0 ) {
			                f = new Function(fd, fb);
			        }
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return f;
	}
	// $ANTLR end "function"



	// $ANTLR start "functionDecl"
	// ul.g:63:1: functionDecl returns [FunctionDecl fd] : ct= compoundType id= identifier OPARENTHESES fp= formalParameters CPARENTHESES ;
	public final FunctionDecl functionDecl() throws RecognitionException {
		FunctionDecl fd = null;


		TypeNode ct =null;
		Identifier id =null;
		FormalParameters fp =null;

		try {
			// ul.g:64:9: (ct= compoundType id= identifier OPARENTHESES fp= formalParameters CPARENTHESES )
			// ul.g:65:9: ct= compoundType id= identifier OPARENTHESES fp= formalParameters CPARENTHESES
			{
			pushFollow(FOLLOW_compoundType_in_functionDecl193);
			ct=compoundType();
			state._fsp--;
			if (state.failed) return fd;
			pushFollow(FOLLOW_identifier_in_functionDecl199);
			id=identifier();
			state._fsp--;
			if (state.failed) return fd;
			match(input,OPARENTHESES,FOLLOW_OPARENTHESES_in_functionDecl201); if (state.failed) return fd;
			pushFollow(FOLLOW_formalParameters_in_functionDecl207);
			fp=formalParameters();
			state._fsp--;
			if (state.failed) return fd;
			match(input,CPARENTHESES,FOLLOW_CPARENTHESES_in_functionDecl209); if (state.failed) return fd;
			if ( state.backtracking==0 ) {
			                Declaration d = new Declaration(ct, id);
			                fd = new FunctionDecl(d, fp);
			                fd.line = ct.line;
			                fd.offset = ct.offset;
			        }
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return fd;
	}
	// $ANTLR end "functionDecl"



	// $ANTLR start "formalParameters"
	// ul.g:75:1: formalParameters returns [FormalParameters fp] : ( (ct1= compoundType id1= identifier ) ( COMMA ct2= compoundType id2= identifier )* |);
	public final FormalParameters formalParameters() throws RecognitionException {
		FormalParameters fp = null;


		TypeNode ct1 =null;
		Identifier id1 =null;
		TypeNode ct2 =null;
		Identifier id2 =null;


		        fp = new FormalParameters();

		try {
			// ul.g:80:9: ( (ct1= compoundType id1= identifier ) ( COMMA ct2= compoundType id2= identifier )* |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==TYPE) ) {
				alt3=1;
			}
			else if ( (LA3_0==CPARENTHESES) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return fp;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// ul.g:81:9: (ct1= compoundType id1= identifier ) ( COMMA ct2= compoundType id2= identifier )*
					{
					// ul.g:81:9: (ct1= compoundType id1= identifier )
					// ul.g:81:10: ct1= compoundType id1= identifier
					{
					pushFollow(FOLLOW_compoundType_in_formalParameters254);
					ct1=compoundType();
					state._fsp--;
					if (state.failed) return fp;
					pushFollow(FOLLOW_identifier_in_formalParameters260);
					id1=identifier();
					state._fsp--;
					if (state.failed) return fp;
					if ( state.backtracking==0 ) {
					                fp.add(new Declaration(ct1, id1));
					                fp.line = ct1.line;
					                fp.offset = ct1.offset;
					        }
					}

					// ul.g:87:9: ( COMMA ct2= compoundType id2= identifier )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==COMMA) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// ul.g:87:10: COMMA ct2= compoundType id2= identifier
							{
							match(input,COMMA,FOLLOW_COMMA_in_formalParameters285); if (state.failed) return fp;
							pushFollow(FOLLOW_compoundType_in_formalParameters291);
							ct2=compoundType();
							state._fsp--;
							if (state.failed) return fp;
							pushFollow(FOLLOW_identifier_in_formalParameters297);
							id2=identifier();
							state._fsp--;
							if (state.failed) return fp;
							if ( state.backtracking==0 ) {fp.add(new Declaration(ct2, id2));}
							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;
				case 2 :
					// ul.g:89:9: 
					{
					}
					break;

			}
		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return fp;
	}
	// $ANTLR end "formalParameters"



	// $ANTLR start "functionBody"
	// ul.g:92:1: functionBody returns [FunctionBody fb] : OBRACE (vd= varDecl )* (s= statement )* CBRACE ;
	public final FunctionBody functionBody() throws RecognitionException {
		FunctionBody fb = null;


		Token OBRACE1=null;
		VariableDeclaration vd =null;
		Statement s =null;


		        fb = new FunctionBody();

		try {
			// ul.g:97:9: ( OBRACE (vd= varDecl )* (s= statement )* CBRACE )
			// ul.g:98:9: OBRACE (vd= varDecl )* (s= statement )* CBRACE
			{
			OBRACE1=(Token)match(input,OBRACE,FOLLOW_OBRACE_in_functionBody348); if (state.failed) return fb;
			// ul.g:98:16: (vd= varDecl )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==TYPE) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// ul.g:98:17: vd= varDecl
					{
					pushFollow(FOLLOW_varDecl_in_functionBody355);
					vd=varDecl();
					state._fsp--;
					if (state.failed) return fb;
					if ( state.backtracking==0 ) {fb.addVarDecl(vd);}
					}
					break;

				default :
					break loop4;
				}
			}

			// ul.g:98:54: (s= statement )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==CHARACTERCONSTANT||(LA5_0 >= FALSE && LA5_0 <= INTEGERCONSTANT)||LA5_0==OPARENTHESES||(LA5_0 >= PRINT && LA5_0 <= TRUE)||LA5_0==WHILE) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// ul.g:98:55: s= statement
					{
					pushFollow(FOLLOW_statement_in_functionBody367);
					s=statement();
					state._fsp--;
					if (state.failed) return fb;
					if ( state.backtracking==0 ) {fb.addStatement(s);}
					}
					break;

				default :
					break loop5;
				}
			}

			match(input,CBRACE,FOLLOW_CBRACE_in_functionBody374); if (state.failed) return fb;
			if ( state.backtracking==0 ) {
			                fb.line = (OBRACE1!=null?OBRACE1.getLine():0);
			                fb.offset = (OBRACE1!=null?OBRACE1.getCharPositionInLine():0);
			        }
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return fb;
	}
	// $ANTLR end "functionBody"



	// $ANTLR start "varDecl"
	// ul.g:105:1: varDecl returns [VariableDeclaration vd] : ct= compoundType id= identifier SEMICOLON ;
	public final VariableDeclaration varDecl() throws RecognitionException {
		VariableDeclaration vd = null;


		TypeNode ct =null;
		Identifier id =null;

		try {
			// ul.g:105:41: (ct= compoundType id= identifier SEMICOLON )
			// ul.g:106:9: ct= compoundType id= identifier SEMICOLON
			{
			pushFollow(FOLLOW_compoundType_in_varDecl410);
			ct=compoundType();
			state._fsp--;
			if (state.failed) return vd;
			pushFollow(FOLLOW_identifier_in_varDecl416);
			id=identifier();
			state._fsp--;
			if (state.failed) return vd;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_varDecl418); if (state.failed) return vd;
			if ( state.backtracking==0 ) {
			                vd = new VariableDeclaration(ct, id);
			                vd.line = ct.line;
			                vd.offset = ct.offset;
			        }
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return vd;
	}
	// $ANTLR end "varDecl"



	// $ANTLR start "statement"
	// ul.g:114:1: statement returns [Statement s] : ( SEMICOLON |es= exprStatement |is= ifStatement |ws= whileStatement |ps= printStatement |pls= printlnStatement |rs= returnStatement |as= assignStatement |ars= arrayAssignStatement );
	public final Statement statement() throws RecognitionException {
		Statement s = null;


		Token SEMICOLON2=null;
		ExpressionStatement es =null;
		IfStatement is =null;
		WhileStatement ws =null;
		PrintStatement ps =null;
		PrintlnStatement pls =null;
		ReturnStatement rs =null;
		AssignmentStatement as =null;
		ArrayAssignmentStatement ars =null;

		try {
			// ul.g:114:32: ( SEMICOLON |es= exprStatement |is= ifStatement |ws= whileStatement |ps= printStatement |pls= printlnStatement |rs= returnStatement |as= assignStatement |ars= arrayAssignStatement )
			int alt6=9;
			switch ( input.LA(1) ) {
			case SEMICOLON:
				{
				alt6=1;
				}
				break;
			case ID:
				{
				int LA6_2 = input.LA(2);
				if ( (synpred7_ul()) ) {
					alt6=2;
				}
				else if ( (synpred13_ul()) ) {
					alt6=8;
				}
				else if ( (true) ) {
					alt6=9;
				}

				}
				break;
			case CHARACTERCONSTANT:
			case FALSE:
			case FLOATCONSTANT:
			case INTEGERCONSTANT:
			case OPARENTHESES:
			case STRINGCONSTANT:
			case TRUE:
				{
				alt6=2;
				}
				break;
			case IF:
				{
				alt6=3;
				}
				break;
			case WHILE:
				{
				alt6=4;
				}
				break;
			case PRINT:
				{
				alt6=5;
				}
				break;
			case PRINTLN:
				{
				alt6=6;
				}
				break;
			case RETURN:
				{
				alt6=7;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return s;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// ul.g:115:9: SEMICOLON
					{
					SEMICOLON2=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_statement456); if (state.failed) return s;
					if ( state.backtracking==0 ) {s = new EmptyStatement(); s.line = (SEMICOLON2!=null?SEMICOLON2.getLine():0); s.offset = (SEMICOLON2!=null?SEMICOLON2.getCharPositionInLine():0);}
					}
					break;
				case 2 :
					// ul.g:116:12: es= exprStatement
					{
					pushFollow(FOLLOW_exprStatement_in_statement475);
					es=exprStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s = es;}
					}
					break;
				case 3 :
					// ul.g:117:12: is= ifStatement
					{
					pushFollow(FOLLOW_ifStatement_in_statement494);
					is=ifStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s = is;}
					}
					break;
				case 4 :
					// ul.g:118:12: ws= whileStatement
					{
					pushFollow(FOLLOW_whileStatement_in_statement513);
					ws=whileStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s = ws;}
					}
					break;
				case 5 :
					// ul.g:119:12: ps= printStatement
					{
					pushFollow(FOLLOW_printStatement_in_statement532);
					ps=printStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s = ps;}
					}
					break;
				case 6 :
					// ul.g:120:12: pls= printlnStatement
					{
					pushFollow(FOLLOW_printlnStatement_in_statement551);
					pls=printlnStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s = pls;}
					}
					break;
				case 7 :
					// ul.g:121:12: rs= returnStatement
					{
					pushFollow(FOLLOW_returnStatement_in_statement570);
					rs=returnStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s = rs;}
					}
					break;
				case 8 :
					// ul.g:122:12: as= assignStatement
					{
					pushFollow(FOLLOW_assignStatement_in_statement589);
					as=assignStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s = as;}
					}
					break;
				case 9 :
					// ul.g:123:12: ars= arrayAssignStatement
					{
					pushFollow(FOLLOW_arrayAssignStatement_in_statement609);
					ars=arrayAssignStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) {s = ars;}
					}
					break;

			}
		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "statement"



	// $ANTLR start "exprStatement"
	// ul.g:126:1: exprStatement returns [ExpressionStatement es] : e= expr SEMICOLON ;
	public final ExpressionStatement exprStatement() throws RecognitionException {
		ExpressionStatement es = null;


		Expression e =null;

		try {
			// ul.g:127:9: (e= expr SEMICOLON )
			// ul.g:128:9: e= expr SEMICOLON
			{
			pushFollow(FOLLOW_expr_in_exprStatement645);
			e=expr();
			state._fsp--;
			if (state.failed) return es;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_exprStatement647); if (state.failed) return es;
			if ( state.backtracking==0 ) {
			                es = new ExpressionStatement(e);
			                es.line = e.line;
			                es.offset = e.offset;
			        }
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return es;
	}
	// $ANTLR end "exprStatement"



	// $ANTLR start "ifStatement"
	// ul.g:136:1: ifStatement returns [IfStatement is] : ( IF OPARENTHESES e= expr CPARENTHESES b1= block ELSE b2= block | IF OPARENTHESES e= expr CPARENTHESES b= block );
	public final IfStatement ifStatement() throws RecognitionException {
		IfStatement is = null;


		Expression e =null;
		Block b1 =null;
		Block b2 =null;
		Block b =null;

		try {
			// ul.g:140:2: ( IF OPARENTHESES e= expr CPARENTHESES b1= block ELSE b2= block | IF OPARENTHESES e= expr CPARENTHESES b= block )
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==IF) ) {
				int LA7_1 = input.LA(2);
				if ( (synpred14_ul()) ) {
					alt7=1;
				}
				else if ( (true) ) {
					alt7=2;
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return is;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// ul.g:141:9: IF OPARENTHESES e= expr CPARENTHESES b1= block ELSE b2= block
					{
					match(input,IF,FOLLOW_IF_in_ifStatement689); if (state.failed) return is;
					match(input,OPARENTHESES,FOLLOW_OPARENTHESES_in_ifStatement691); if (state.failed) return is;
					pushFollow(FOLLOW_expr_in_ifStatement697);
					e=expr();
					state._fsp--;
					if (state.failed) return is;
					match(input,CPARENTHESES,FOLLOW_CPARENTHESES_in_ifStatement699); if (state.failed) return is;
					pushFollow(FOLLOW_block_in_ifStatement705);
					b1=block();
					state._fsp--;
					if (state.failed) return is;
					match(input,ELSE,FOLLOW_ELSE_in_ifStatement707); if (state.failed) return is;
					pushFollow(FOLLOW_block_in_ifStatement713);
					b2=block();
					state._fsp--;
					if (state.failed) return is;
					if ( state.backtracking==0 ) {is = new IfStatement(e, b1, b2);}
					}
					break;
				case 2 :
					// ul.g:142:11: IF OPARENTHESES e= expr CPARENTHESES b= block
					{
					match(input,IF,FOLLOW_IF_in_ifStatement727); if (state.failed) return is;
					match(input,OPARENTHESES,FOLLOW_OPARENTHESES_in_ifStatement729); if (state.failed) return is;
					pushFollow(FOLLOW_expr_in_ifStatement735);
					e=expr();
					state._fsp--;
					if (state.failed) return is;
					match(input,CPARENTHESES,FOLLOW_CPARENTHESES_in_ifStatement737); if (state.failed) return is;
					pushFollow(FOLLOW_block_in_ifStatement743);
					b=block();
					state._fsp--;
					if (state.failed) return is;
					if ( state.backtracking==0 ) {is = new IfStatement(e, b);}
					}
					break;

			}
			if ( state.backtracking==0 ) {
			        is.line = e.line;
			        is.offset = e.offset;
			}
		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
		return is;
	}
	// $ANTLR end "ifStatement"


